fix: alignment

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -101,14 +101,14 @@ body {
 }
 
 .gradient-background {
-  animation: rotateGradient 5s linear infinite;
-  transition: all 0.2s ease-out;
+  animation: rotateGradient 10s linear infinite;
+  transition: all 10s ease-out;
   min-height: 95vh;
   background: linear-gradient(
     115.03deg,
-    #ffffff 0.54%,
-    #0075ff 27.97%,
-    rgba(0, 70, 153, 0.25) 119.25%
+    #ffffff 0.5%,
+    #0075ff 10.97%,
+    rgba(0, 70, 153, 0.25) 100.25%
   );
   background-repeat: no-repeat;
   background-size: cover;
@@ -120,7 +120,7 @@ body {
   justify-content: space-between;
   overflow: hidden;
   background-repeat: no-repeat;
-  background-size: 400% 400%;
+  background-size: 200% 200%;
 }
 
 @keyframes rotateGradient {
@@ -128,7 +128,7 @@ body {
     background-position: 0 0;
   }
   50% {
-    background-position: 20% 20%;
+    background-position: 50% 50%;
   }
   100% {
     background-position: 0 0;
